@@ -1,13 +1,14 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Daemon-Generic
-version:      0.4
+version:      0.51
 version_from: lib/Daemon/Generic.pm
 installdirs:  site
 requires:
     Cwd:                           0
     File::Basename:                0
     File::Flock:                   0
+    File::Slurp:                   0
     Getopt::Long:                  0
     Text::Wrap:                    0
 
