@@ -13,7 +13,7 @@ use File::Flock;
 our @ISA = qw(Exporter);
 our @EXPORT = qw(newdaemon);
 
-our $VERSION = 0.4;
+our $VERSION = 0.51;
 
 our $force_quit_delay = 15;
 our $package = __PACKAGE__;
